# nlink-v1trial

./: nlink-trail.txt  nlink_cli_semverx - Shortcut.lnk  obinexus_sinphase_framework.sh  setup_nlink_semverx.sh
bootstrappers/: bootstrappers.sh
nlink/: README.md
nlink/docs/diagrams/: nlink_arch.plantuml
nlink/docs/guides/: intergtaraion_guide.md
nlink/docs/pattern_matching/: README.md  regex_patterns.md  wildcard_patterns.md
nlink/docs/unif/: NexusLink OVerview.md
nlink/docs/usage/: NLINK.md
nlink/examples/pattern_matching/: example.nlink
nlink/nlink/: .gitignore  CMakeLists.txt  Makefile
nlink/nlink/__tests__/: CMakeLists.txt
nlink/nlink/cmake/: BuildSystem.cmake  ComponentSystem.cmake  Hooks.cmake  NexusLinkConfig.cmake.in  PackageConfig.cmake  TestFramework.cmake  Utils.cmake
nlink/nlink/scripts/: fix_nlink_includes.sh  remove_invalid_includes.py  standardize_nlink_includes.py
nlink/nlink/src/: CMakeLists.txt
nlink/poc/: STATUS.md
nlink/poc/nlink_cli/: Makefile  pkg.nlink  setup.sh
nlink/poc/nlink_cli_semverx/: Makefile
nlink/poc/nlink_qa_poc/: Makefile
nlink/poc/nlink_qa_poc_backup_20250614_140033/: pkg.nlink
nlink/poc/nlink_qa_poc_etps_telemetry_research_v1_20250614_143238/: Makefile  sinphases_tdd_retrofit.sh
nlink/poc/nlink_qa_poc_recovery_1.5.1/: nlink_qa_poc_audit_20250614_142005.txt
nlink_cli/: Makefile  README.md  compiler_Demo_project.sh  nlink  setup.sh  test_config.c
nlink_cli/cli/: parser_interface.c  parser_interface.c.backup  parser_interface.c.main_conflict  parser_interface_lib.c  parser_interface_lib.c.old
nlink_cli/compiler_demo/: Makefile  README.md  pkg.nlink
nlink_cli/core/: config.c  config.c.backup
nlink_cli/demo_project/component2/: nlink.txt
nlink_cli/include/cli/: parser_interface.h
nlink_cli/include/core/: config.h
nlink_cli/scripts/: build.sh  run_tests.sh
nlink_cli/single_demo/: pkg.nlink
nlink_cli/src/: main.c
nlink_cli/test/unit/: test_config.c
nlink_cli_backup_20250604_165132/: README.md  nlink  reorganize_project.sh
nlink_cli_backup_20250604_165132/cli/: parser_interface.c  parser_interface.c.backup
nlink_cli_backup_20250604_165132/core/: config.c.backup
nlink_cli_backup_20250604_165132/demo_project/: pkg.nlink
nlink_cli_backup_20250604_165132/demo_project/component1/: nlink.txt
nlink_cli_semverx/: Makefile  Makefile.backup  header_consolidation_fix.sh  immediate_compialtion_fix.sh  restructing_plan.sh  setup-demo.sh  setup_demo.sh
nlink_cli_semverx/backup_20250610_211726/: Makefile  main.c  pkg.nlink
nlink_cli_semverx/backup_20250610_211726/core/: config.c
nlink_cli_semverx/core/: config.c
nlink_cli_semverx/demo_semverx_project/: pkg.nlink
nlink_cli_semverx/demo_semverx_project/component2/: nlink.txt
nlink_cli_semverx/examples/: Makefile  setup_demo.sh
nlink_cli_semverx/examples/calculation_pipeline/: README.md  pkg.nlink
nlink_cli_semverx/examples/simple_parser/: pkg.nlink
nlink_cli_semverx/include/core/: config.h
nlink_cli_semverx/include/nlink_semverx/: nlink_semverx.h
nlink_cli_semverx/include/semverx/: semverx_parser.h
nlink_cli_semverx/lib/: libnlink.so.1
nlink_cli_semverx/nlink/: compatibility_matrix.nlink  range_policies.nlink
nlink_cli_semverx/nlink/cli/: parser_interface.h
nlink_cli_semverx/nlink/shared_artifacts/: registry.nlink
nlink_cli_semverx/old/: Makefile.old
nlink_cli_semverx/scripts/: run_tests.sh  validate_semverx.sh
nlink_cli_semverx/semverx/: semverx_parser.c
nlink_cli_semverx/src/: main.c
nlink_qa_poc/: Makefile  final_build_fix.sh  missing_project_modules.sh  modern_cython_pyproject.toml  nlink_build_fix.sh  nlink_comprehensive_setup.sh  run_qa.sh
nlink_qa_poc/examples/cython-package/: Makefile  pyproject.toml  setup.py
nlink_qa_poc/examples/cython-package/src/nlink_data_marshal/: python_fallback.py
nlink_qa_poc/lib/: libnlink.so.1.0.0  nlink.so.1.0.0
nlink_qa_poc/old/: Makefile.2old  Makefile.old
nlink_qa_poc/src/: main.c  nlink.c
nlink_qa_poc_backup_20250614_140033/: README.md
nlink_qa_poc_backup_20250614_140033/backup_20250614_003923/: main.c
nlink_qa_poc_backup_20250614_140033/examples/: Makefile
nlink_qa_poc_backup_20250614_140033/src/: nlink.c.warnings_backup
nlink_qa_poc_backup_20250614_140658/: Makefile  warning_fix_script.sh
nlink_qa_poc_backup_20250614_140658/examples/cython-package/: pyproject.toml
nlink_qa_poc_backup_20250614_140658/old/: Makefile.backup
nlink_qa_poc_etps_telemetry_research_v1_20250614_143238/: PHASE_DOCUMENTATION.md  git_workflow_resolution.sh
nlink_qa_poc_etps_telemetry_research_v1_20250614_143238/lib/: nlink.so.1.5.1
nlink_qa_poc_recovery_1.5.1/: Makefile  header_deployment_fix.sh  include_path_audit_script.sh  nlink_qa_poc_audit_20250614_141721.txt
(+305 files in other folders)
